[tool.poetry]
name = "testtest"
version = "0.1.0"
description = ""
authors = ["vincent <vincent@timepercentcorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
